--- a/03-generators/stylesheet/style-sheet.css
+++ b/03-generators/stylesheet/style-sheet.css
@@ -53,7 +53,7 @@ h1 {
 }
 
 .button {
-    background: transparent; /* Green */
+    background: transparent;
     border: 1px solid black;
     color: rgb(0, 0, 0);
     padding: 10px;
@@ -63,5 +63,4 @@ h1 {
     display: inline-block;
     font-size: 16px;
     cursor: pointer;
-
 }
